# ESN-Activities-API

./: .env.example  .gitignore  README.md  enrich_events_with_details.py  esn_countries.json  esn_sections.json  events3.json  main.py  manage.py  menu_scraper_main.py  pyproject.toml  sections.json  upload_events_to_supabase.py
.github/workflows/: scrapper.yml
conductor/: speed-up-scraping.md
src/: detail_scraper_funcs.py  menu_scraper_funcs.py  section_scraper.py
src/scrapers/: __init__.py  base_scraper.py  country_scraper.py  event_scraper.py  section_scraper.py
supabase/migrations/: 20250327120000_create_esn_events.sql  20260328_rebuild_esn_schema.sql
