[project]
name = "esn-activities-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "python-dotenv>=1.0,<2",
    "requests>=2.31,<3",
    "supabase>=2,<3",
    "uvicorn[standard]>=0.32,<1",
]
